# FikarYaar

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quiz_test.json  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml
agents/: __init__.py  darban.py  imtehaan.py  mehakkim.py  muhaqqiq.py  ustad.py
app/: __init__.py  main.py
app/agents/: darban.py  imtehaan.py  mehakkim.py  muhaqqiq.py  ustad.py
app/api/: __init__.py  routes.py  schemas.py
app/core/: __init__.py  config.py  keepalive.py  logging.py  prompts.py  security.py
app/rag/: __init__.py  debug.py  embeddings.py  graph.py  ingest.py  llm.py  loader.py  splitter.py  state.py  text_utils.py  vectorstore.py
app/rag/nodes/: classify.py  generate.py  grade.py  refuse.py  retrieve.py  rewrite.py
data/: eval_after_retrieval.json  eval_before.json  eval_results.json
data/uploads/: .gitkeep
pdf/: README.md
scripts/: eval_rag.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: test_security.py  test_splitter.py
